# db-perfomance-test

./: .gitignore  pyproject.toml  readme.md
docker-compose/: db.yaml  postgresql.yaml
src/: api.py  db.py  db_clickhouse.py  run_local.py  run_local_clickhouse.py  utils.py
src/models/: data.py
src/sql/clickhouse/: db_init.py
